--- a/Application/gradle/libs.versions.toml
+++ b/Application/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.12.2"
 composeBom = "2026.01.00"
 uiGraphics = "1.10.1"
 browser = "1.9.0"
+uiGraphicsVersion = "1.10.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -28,6 +29,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
+ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphicsVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
